--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<h1>Marutani Kyouhei</h1>
+							<h1>Marutani Kyohei</h1>
 						</header>
 						<hr />
 						<h2>Current Position</h2>
