--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Kyohei Marutani</title>
+		<title>Kyohei Marutani 丸谷恭平</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<h1>Marutani Kyohei</h1>
+							<h1>Kyohei Marutani</h1>
 						</header>
 						<hr />
 						<h2>Current Position</h2>
